# advent-of-code

./: .gitignore  Justfile  README  README.md  aoc  flake.nix  run  shell.nix
agda/: Justfile  a1501.agda  default.agda-lib
clj/: Justfile  deps.edn  skeleton.clj
cx/: Justfile  a1501.cx
examples/: 1602.txt  1605.txt  1606.txt  1614.txt  1615.txt  1717.txt  1719.txt  1902.txt  2104.txt  2110.txt  2113.txt  2117.txt  2119.txt  2120.txt  2123.txt  2206.txt  2207.txt  2210.txt  2211.txt  2212.txt  2215.txt  2219.txt  2220.txt  2222.txt  2223.txt  2225.txt  2302.txt  2307.txt  2312.txt  2314.txt  2315.txt  2318.txt  2320.txt  2322.txt  2402.txt  2406.txt  2408.txt  2409.txt  2410.txt  2411.txt  (+25 more)
extras/: 2015.tar.xz.gpg  2016.tar.xz.gpg  2017.tar.xz.gpg  2018.tar.xz.gpg  2020.tar.xz.gpg  2021.tar.xz.gpg  2022.tar.xz.gpg  2023.tar.xz.gpg  2024.tar.xz.gpg  2320.dot  play-christmas-music-album.sh
idr/: 1501.idr  Justfile
input/: 1504a.txt  1508a.txt  1602.out  1608.out  1616.out  1617a.txt  1619.out  1619a.txt  1621.out  1622.out  1624a.txt  1702.out  1707.out  (+120 more)
rs/: Cargo.toml  Justfile  skeleton.rs
rs/benches/: bench.rs
rs/examples/: 1501.rs  1502.rs  1506.rs  1507.rs  1508.rs  1509.rs  1512.rs  1517.rs  1518.rs  1519.rs  1520.rs  1521.rs  1522.rs  1523.rs  1524.rs  1525.rs  1601.rs  1602.rs  1603.rs  1604.rs  1605.rs  1606.rs  1607.rs  1608.rs  1609.rs  1610.rs  1611.rs  1612.rs  1613.rs  1614.rs  1614b.rs  1615.rs  1616.rs  1617.rs  1618.rs  1619.rs  1620.rs  1621.rs  1622.rs  1623.rs  (+127 more)
rs/examples/assembunny/: mod.rs
rs/examples/knot_hash/: mod.rs
rs/src/: 2010.rs  axis_box.rs  lib.rs  md5.rs  n_range.rs  ocr.rs  operand.rs  orthotope.rs  prelude.rs  range_n.rs  util.rs
(+50 files in other folders)
