[package]
name = "aoc-rust"
version = "0.1.0"
authors = ["rsaarelm <risto.saarelma@iki.fi>"]
edition = "2021"

[lib]
name = "aoc"

[dependencies]
bitvec = "1"
derive_deref = "1"
fraction = "0.12"
glam = "0.22"
itertools = "0.10"
lazy_static = "1"
memoize = "0.3"
nom = "7"
num = "0.4"
rand = "0.8"
rayon = "1"
regex = "1"
rustc-hash = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
