[package]
name = "aoc-rust"
version = "0.1.0"
authors = ["rsaarelm <risto.saarelma@iki.fi>"]
edition = "2021"

[lib]
name = "aoc"

[dependencies]
bitvec = "1"
derive_deref = "1"
fraction = "0.13"
glam = "0.22"
itertools = "0.10"
lazy_static = "1"
memoize = "0.3"
nalgebra = "0.31"
nom = "7"
num-integer = "0.1"
num-traits = "0.2"
rand = { version = "0.8", features = ["small_rng"] }
rayon = "1"
regex = "1"
rustc-hash = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
z3 = "0.11"
