[package]
name = "aoc-rust"
version = "0.1.0"
authors = ["rsaarelm <risto.saarelma@iki.fi>"]
edition = "2021"

[lib]
name = "aoc"

[dependencies]
anyhow = "1"
bitvec = "1"
derive_deref = "1"
fraction = "0.15"
glam = "0.29"
idm = "0.4"
indexmap = "2"
itertools = "0.13"
lazy_static = "1"
memoize = "0.4"
nalgebra = "0.33"
nom = "7"
num-integer = "0.1"
num-traits = "0.2"
pathfinding = "4"
rayon = "1"
regex = "1"
rustc-hash = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
si_trace_print = "0.3"
# FIXME: Nix pkg is broken?
# z3 = "0.11"

[dev-dependencies]
rand = { version = "0.8", features = ["small_rng"] }
